--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="subtraction">Subtraction</string>
     <string name="multiplication">Multiplication</string>
     <string name="division">Division</string>
+    <string name="addition_symbol">\u002B</string>
+    <string name="subtraction_symbol">\u2212</string>
+    <string name="multiplication_symbol">\u00D7</string>
+    <string name="division_symbol">\u00F7</string>
 </resources>
