--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="subtraction_symbol">\u2212</string>
     <string name="multiplication_symbol">\u00D7</string>
     <string name="division_symbol">\u00F7</string>
+    <string name="something_broke">Oops, something broke!</string>
 </resources>
