- Added lottie. - Added correct and wrong answer json animation files. - Some refactoring. - Updated build tools and gradle version. - Added logic for division.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="multiplication_symbol">\u00D7</string>
     <string name="division_symbol">\u00F7</string>
     <string name="something_broke">Oops, something broke!</string>
+    <string name="question_text">%1$s %2$s %3$s = ?</string>
 </resources>
